--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,8 @@ body {
   background-color: rgba(243, 209, 172, 0.507);
 }
 
+/* deployment */
+
 /* Add to globals.css */
 .custom-toast-container {
   font-family: inherit;
